--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-native-indicators": "^0.16.2",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "lottie-react-native": "^5.0.1",
     "native-base": "^3.4.4",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "~2.2.0",
@@ -29,6 +32,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.3.0",
     "react-native-ui-lib": "^6.14.1",
     "react-native-web": "0.17.7"
