--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,12 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "target": "ESNext"
+    "baseUrl": ".",
+    "target": "ESNext", 
+    "module": "CommonJS",
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@assets/*": ["./assets/*"]
+    }
   }
 }
