--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "formik": "^2.2.9",
     "lottie-react-native": "^5.0.1",
     "native-base": "^3.4.4",
     "react": "^18.1.0",
@@ -35,7 +36,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.3.0",
     "react-native-ui-lib": "^6.14.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
