--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
-    "lottie-react-native": "^5.0.1",
+    "lottie-react-native": "5.0.1",
     "native-base": "^3.4.4",
     "react": "^18.1.0",
     "react-dom": "17.0.2",
