--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "formik": "^2.2.9",
     "lottie-react-native": "5.0.1",
     "native-base": "^3.4.4",
-    "react": "^18.1.0",
+    "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-gesture-handler": "~2.2.0",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "~0.67.6",
     "typescript": "~4.3.5"
   },
   "private": true
