--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-native-vector-icons": "^6.4.10",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
@@ -36,6 +37,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.3.0",
     "react-native-ui-lib": "^6.14.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
   },
