--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "native-base": "^3.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "~2.8.0",
@@ -44,9 +44,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "17.0.21",
     "@types/react-native": "~0.67.6",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  }
 }
