--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.14.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
+    "react-native-wizard": "^2.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
