--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.2",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-native-video": "^5.0.13",
     "babel-plugin-module-resolver": "^4.1.0",
+    "epic-chip-react-native": "^1.0.7",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-av": "~11.2.3",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-media-library": "~14.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
@@ -30,9 +36,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-indicators": "^0.17.0",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-reanimated": "~2.8.0",
+    "react-native-redash": "^16.2.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
@@ -41,6 +51,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.14.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
     "react-native-web": "0.17.7",
     "react-native-wizard": "^2.1.0",
     "yup": "^0.32.11"
